Updated the home page

--- a/app/views/home/home.html
+++ b/app/views/home/home.html
@@ -1,6 +1,36 @@
-<p>This is the about new view.</p>
+<!-- <p>This is the about new view.</p>
 <button type="button" ng-click="vm.getUser()">Get</button>
 <button type="button" ng-click="vm.getAllUsers()">GetAll</button>
 <button type="button" ng-click="vm.saveUser()">Save</button>
 <button type="button" ng-click="vm.updateUser()">Update</button>
-<button type="button" ng-click="vm.deleteUser()">Delete</button>
+<button type="button" ng-click="vm.deleteUser()">Delete</button> -->
+<div id="coverPage" class="">
+	<div class="content-wrapper">
+<div class="container">
+	<div class="main-content text-center vertical-center">
+<div class="row">
+<div class="col-xs-12">
+<h1 class="main-heading">Home Page</h1>
+<div class="gap"></div>
+<form action="" autocomplete="off" class="home-page-form">
+	<div class="col-xs-12 col-sm-8 col-sm-offset-1 search-input-box form-group">
+		<div class="row">
+	<input type="text" placeholder="Search venues, caterers, photography and what not" class="form-control input-lg no-border-top-right-radius no-border-bottom-right-radius home-search-box">
+</input>
+</div>
+	</div>
+
+	<div class="col-xs-12 col-sm-2 search-button form-group">
+		<div class="row">
+		<input class="btn btn-lg btn-default home-search-btn no-border-bottom-left-radius no-border-top-left-radius" type="button" value="SEARCH"/>
+	</div>
+</div>
+
+
+</form>
+</div>
+</div>
+</div>
+</div>
+	</div>
+	</div>
