--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -30,90 +30,25 @@
     font-style: normal;
 }
 
-.browsehappy {
-  margin: 0.2em 0;
-  background: #ccc;
-  color: #000;
-  padding: 0.2em 0;
+
+html, body {
+  color: #656565;
+  font-family: 'OpenSans-Regular', sans serif;
+  font-size: 14px;
+  overflow-x: hidden;
 }
 
-body {
-  padding: 0;
-  font-family: 'OpenSans-Regular';
+section {
+    padding-top: 2em;
+    padding-bottom: 2em;
+    background-size: cover!important;
 }
 
-/* Everything but the jumbotron gets side spacing for mobile first views */
-.header,
-.marketing,
-.footer {
-  padding-left: 15px;
-  padding-right: 15px;
+ul, ol{
+	padding: 0px;
+	margin: 0px;
 }
 
-/* Custom page header */
-.header {
-  border-bottom: 1px solid #e5e5e5;
-  margin-bottom: 10px;
-}
-/* Make the masthead heading the same height as the navigation */
-.header h3 {
-  margin-top: 0;
-  margin-bottom: 0;
-  line-height: 40px;
-  padding-bottom: 19px;
-}
-
-/* Custom page footer */
-.footer {
-  padding-top: 19px;
-  color: #777;
-  border-top: 1px solid #e5e5e5;
-}
-
-.container-narrow > hr {
-  margin: 30px 0;
-}
-
-/* Main marketing message and sign up button */
-.jumbotron {
-  text-align: center;
-  border-bottom: 1px solid #e5e5e5;
-}
-.jumbotron .btn {
-  font-size: 21px;
-  padding: 14px 24px;
-}
-
-/* Supporting marketing content */
-.marketing {
-  margin: 40px 0;
-}
-.marketing p + h4 {
-  margin-top: 28px;
-}
-
-/* Responsive: Portrait tablets and up */
-@media screen and (min-width: 768px) {
-  .container {
-    max-width: 730px;
-  }
-
-  /* Remove the padding we set earlier */
-  .header,
-  .marketing,
-  .footer {
-    padding-left: 0;
-    padding-right: 0;
-  }
-  /* Space out the masthead */
-  .header {
-    margin-bottom: 30px;
-  }
-  /* Remove the bottom border on the jumbotron for visual effect */
-  .jumbotron {
-    border-bottom: 0;
-  }
-}
 
 /*Common functionality*/
 .no-margin-right{
@@ -158,6 +93,20 @@ body {
 .gap{
   height: 100px;
 }
+
+.semi-gap{
+  height: 50px;
+}
+.quarter-gap{
+	height: 25px;
+}
+
 .bg-theme-color{
       background-color: #f37254;
+}
+.theme-color{
+  color: #f37254;
+}
+.bg-grey {
+    background-color: #EEEEEE;
 }
