ribbon.css file added

--- a/app/styles/home/home.css
+++ b/app/styles/home/home.css
@@ -52,12 +52,7 @@
 	padding: 11px 16px;
 }
 #coverPage .select-option-menu {
-	    background: #F37254;
-	    background: -moz-linear-gradient(left, #f37254 93%, #ffffff 10%);
-	    background: -o-linear-gradient(left, #f37254 93%, #ffffff 10%);
-	    background: -ms-linear-gradient(left, #f37254 93%, #ffffff 10%);
-		background: linear-gradient(left, #f37254 93%, #ffffff 10%);
-		background: -webkit-linear-gradient(left, #f37254 93%, #ffffff 10%);
+	font-family: 'OpenSans-Semibold';    
 	height: 45px;
 	border-radius: 6px;
 	font-size: 18px;
@@ -66,6 +61,12 @@
 	outline: none;
 	width: 100%;
 	padding-left: 6px;
+	    color: #F37254;
+    box-shadow: inset 0 1px 1px rgba(0, 0, 0, .075);
+    -webkit-box-shadow: inset 0 1px 1px rgba(0,0,0,0.75);
+    -moz-box-shadow: inset 0 1px 1px rgba(0,0,0,0.75);
+    -o-box-shadow: inset 0 1px 1px rgba(0,0,0,0.75);
+    -ms-box-shadow: inset 0 1px 1px rgba(0,0,0,0.75);
 }
 
 #coverPage .custom-select-container{
@@ -127,6 +128,21 @@
 .lp-hospitality-icon {
 	background-position: -5px -87px;
 }
+
+    .swiper-container {
+    	width: 100%;
+        padding-top: 0px;
+        padding-bottom: 50px;
+    }
+    .swiper-slide {
+           border-radius: 4px;
+    background-position: center;
+    background-size: cover;
+    width: 300px;
+    height: 300px;
+    margin-top: 2em;
+    margin-bottom: 2em;
+    }
 
 @media only screen and (min-width: 0px) and (max-width: 767px) {
 	#coverPage .home-search-btn {
