--- a/app/views/ribbon/ribbon.html
+++ b/app/views/ribbon/ribbon.html
@@ -1,4 +1,4 @@
-<div id="globalPopupBlackOut" class="blackOut-window" data-ng-show="ribbonOpened">	
+<div id="globalPopupBlackOut" class="blackOut-window" data-ng-show="ribbonOpened" data-ng-click="ribbonOpened = !ribbonOpened">	
 </div>
 <div id='ribbonContainer' data-ng-class='ribbonOpened ? "open" : ""'>
 <nav id="sideRibbon">
