--- a/app/styles/ribbon.css
+++ b/app/styles/ribbon.css
@@ -57,12 +57,21 @@ div#globalPopupBlackOut {
 	font-size: 16px;
 	display: block;
 	height: 48px;
-	padding: 6px 0 0 15px;
+	padding: 0px 0 0 15px;
+	line-height: 48px;
+}
+
+#sideRibbon .ribbon-tabs li.active a,
+#sideRibbon .ribbon-tabs li.active a:hover,
+#sideRibbon .ribbon-tabs li.active a:focus{
+		font-family: 'OpenSans-bold';
+	color: #FFFFFF;
+	background: #F37254;
 }
 
 #sideRibbon .ribbon-tabs li a:hover, #sideRibbon .ribbon-tabs li a:focus {
 	font-family: 'OpenSans-bold';
-	color: #F37254;
+	/*color: #F37254;*/
 }
 
 #sideRibbon .ribbon-form {
