--- a/app/styles/home/home.css
+++ b/app/styles/home/home.css
@@ -1,12 +1,11 @@
 /* Overriding styling for ui-widget for autocomplete */
 .ui-widget {
-    font-family: OpenSans-Regular,Arial,Helvetica,sans-serif;
-    font-size: 1.2em;
-    max-height: 100px;
-    overflow-x: hidden;
-    overflow-y: auto;
+	font-family: OpenSans-Regular, Arial, Helvetica, sans-serif;
+	font-size: 1.2em;
+	max-height: 100px;
+	overflow-x: hidden;
+	overflow-y: auto;
 }
-
 
 #coverPage {
 	position: relative;
@@ -52,7 +51,7 @@
 	padding: 11px 16px;
 }
 #coverPage .select-option-menu {
-	font-family: 'OpenSans-Semibold';    
+	font-family: 'OpenSans-Semibold';
 	height: 45px;
 	border-radius: 6px;
 	font-size: 18px;
@@ -61,27 +60,27 @@
 	outline: none;
 	width: 100%;
 	padding-left: 6px;
-	    color: #F37254;
-    box-shadow: inset 0 1px 1px rgba(0, 0, 0, .075);
-    -webkit-box-shadow: inset 0 1px 1px rgba(0,0,0,0.75);
-    -moz-box-shadow: inset 0 1px 1px rgba(0,0,0,0.75);
-    -o-box-shadow: inset 0 1px 1px rgba(0,0,0,0.75);
-    -ms-box-shadow: inset 0 1px 1px rgba(0,0,0,0.75);
+	color: #F37254;
+	box-shadow: inset 0 1px 1px rgba(0, 0, 0, .075);
+	-webkit-box-shadow: inset 0 1px 1px rgba(0,0,0,0.75);
+	-moz-box-shadow: inset 0 1px 1px rgba(0,0,0,0.75);
+	-o-box-shadow: inset 0 1px 1px rgba(0,0,0,0.75);
+	-ms-box-shadow: inset 0 1px 1px rgba(0,0,0,0.75);
 }
 
-#coverPage .custom-select-container{
+#coverPage .custom-select-container {
 	height: 65px;
 }
 
-#coverPage .custom-select-arrow{
-	    height: 0;
-    width: 0;
-    border-left: 8px solid transparent;
-    border-right: 8px solid transparent;
-    border-top: 10px solid #FFFFFF;
-    position: relative;
-    right: -45%;
-    top: -45%;
+#coverPage .custom-select-arrow {
+	height: 0;
+	width: 0;
+	border-left: 8px solid transparent;
+	border-right: 8px solid transparent;
+	border-top: 10px solid #FFFFFF;
+	position: relative;
+	right: -45%;
+	top: -45%;
 }
 
 #coverPage .select-option-menu:hover, #coverPage .select-option-menu:focus {
@@ -129,20 +128,20 @@
 	background-position: -5px -87px;
 }
 
-    .swiper-container {
-    	width: 100%;
-        padding-top: 0px;
-        padding-bottom: 50px;
-    }
-    .swiper-slide {
-           border-radius: 4px;
-    background-position: center;
-    background-size: cover;
-    width: 300px;
-    height: 300px;
-    margin-top: 2em;
-    margin-bottom: 2em;
-    }
+.portfolioSlider .swiper-container {
+	width: 100%;
+	padding-top: 0px;
+	padding-bottom: 50px;
+}
+.portfolioSlider .swiper-slide {
+	border-radius: 4px;
+	background-position: center;
+	background-size: cover;
+	width: 300px;
+	height: 300px;
+	margin-top: 2em;
+	margin-bottom: 2em;
+}
 
 @media only screen and (min-width: 0px) and (max-width: 767px) {
 	#coverPage .home-search-btn {
@@ -151,5 +150,9 @@
 
 	#coverPage .home-search-box {
 		border-radius: 0px;
+	}
+
+	#coverPage {
+		height: 300px;
 	}
 }
