--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -148,3 +148,92 @@ a:focus{
     text-align: right;
     border-top: none;
 }
+}
+
+.btn-default-white{
+	    color: #ffffff;
+    background-color: rgba(0,0,0,0);
+    font-weight: 600;
+    text-align: center;
+    -ms-touch-action: manipulation;
+    touch-action: manipulation;
+    cursor: pointer;
+        border: 2px solid #ffffff;
+        text-transform: uppercase;
+padding: 8px 12px;
+}
+
+.btn-default-white:hover,
+.btn-default-white:focus{
+	background-color: rgba(255,255,255,1);
+	color: #F37254;
+}
+
+/* Footer css */
+
+#footer {
+padding-top: 2em;
+padding-bottom: 2em;
+background-color: #414042;
+color:#fff;
+}
+
+#footer a {
+	color:#fff;
+	text-decoration:none;
+}
+
+.logo {
+font-size:25px;
+font-weight:400;
+}
+
+p.info, p.connect {
+	font-size:14px;
+}
+
+#footer ul li {
+padding-top:10px;
+}
+
+#footer ul {
+list-style:none;
+margin:0;
+padding:0;
+}
+
+#footer .social li {
+	padding-right: 20px;
+    display: inline-block;
+}
+
+/* Footer css ends*/
+
+/* Header css */
+
+.lp-navbar{
+	position: fixed;
+	z-index: 101;
+	    width: 100%;
+	    background-color: transparent;
+	    border-color: transparent;
+	    border-radius: 0px;
+	    color: #ffffff;
+}
+
+.lp-navbar .navbar-brand {
+    color: #ffffff;
+}
+
+.lp-navbar .navbar-brand:hover,
+.lp-navbar .navbar-brand:focus{
+	color: #ffffff;
+}
+
+.lp-navbar select{
+	    background-color: transparent;
+    margin-top: 15px;
+    margin-bottom: 15px;
+    padding: 5px;
+}
+/* Header css ends*/
