--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -237,3 +237,148 @@ padding:0;
     padding: 5px;
 }
 /* Header css ends*/
+
+.header{
+	width: 100%;
+	background: url(../images/banner_bg.jpg) no-repeat;
+	-webkit-background-size: cover;
+	-moz-background-size: cover;
+	-o-background-size: cover;
+	background-size: cover;
+	background-position: center;
+	background-size: 100% 100%;
+}
+.header-top{
+	background: rgba(0, 0, 0, 0.4);
+	padding: 3% 0;
+}
+.logo{
+	float:left;
+}
+.menu{
+	 float:right;
+}
+  .menu li{
+	display:inline-block;
+ }
+ .menu li:first-child{
+   	margin-left:0;
+ }
+ .menu li a{
+  	display: block;
+	font-size:15px;
+	text-transform: uppercase;
+	padding:10px 20px;
+	color: #FFF;
+	-webkit-transition: all 0.3s ease;
+	-moz-transition: all 0.3s ease;
+	-o-transition: all 0.3s ease;
+	transition: all 0.3s ease;
+	font-weight: 600;
+ }
+ .menu li a:hover ,.menu li.active a{
+	 background:#fff;
+	 color:#4BCAFF;
+ } 
+ #nav .current a {
+	 color:red;
+}
+.toggleMenu {
+    display:  none;
+  	padding: 2px 0px 0px 0px;
+}
+.nav:before,
+.nav:after {
+    content: " "; 
+    display: table; 
+}
+.nav:after {
+    clear: both;
+}
+.nav ul {
+    list-style: none;
+}
+@media screen and (max-width:800px) {
+	.active {
+        display: block;
+    }
+    .menu li a{
+    	text-align:left;
+    	border-radius:0;
+    	-webkit-border-radius:0;
+    	-moz-border-radius:0;
+    	-o-border-radius:0;
+    }
+    .nav {
+	    list-style: none;
+		width: 95%;
+		position: absolute;
+		right: 20px;
+		background:rgba(73, 84, 91, 0.87);
+		top:66px;
+		z-index: 111;
+    }
+    .nav:after {
+		content: '';
+		position: absolute;
+		right:18px;
+		top: -9px;
+		border-left:10px solid rgba(0, 0, 0, 0);
+		border-right:10px solid rgba(0, 0, 0, 0);
+		border-bottom:10px solid rgba(73, 84, 91, 0.87);
+	}
+    .menu li a span.messages{
+    	text-align:center;
+    	top:15px;
+    }
+    .nav li ul{
+    	width:100%;   	
+    }
+    .menu ul{
+    	margin:0;
+    }
+    .nav > li.hover > ul {
+        width:100%;
+    }
+    .nav > li {
+        float: none;
+        display:block;
+    }
+    .nav ul {
+        display: block;
+        width: 100%;
+    }
+   .nav > li.hover > ul , .nav li li.hover ul {
+        position: static;
+    }
+    .nav li a{
+    	border-top:1px solid rgba(73, 84, 91, 0.87);
+    }
+     .nav li:first-child a{
+     	border-top:none;
+     }
+ }
+.header-bottom{
+	padding:15% 0;
+	text-align:center;
+}
+.header-bottom h1{
+	font-family: 'caviar_dreamsregular';
+	color: #FFF;
+	font-size:2.7em;
+	text-transform: uppercase;
+	background: #4B565D;
+	padding: 10px;
+	width:48%;
+	margin: 0 auto 2% auto;
+}
+.header-bottom h2{
+	font-family: 'caviar_dreamsregular';
+	color: #FFF;
+	font-size:2.7em;
+	text-transform: uppercase;
+	background: #4B565D;
+	padding: 10px;
+	width:68%;
+	margin: 0 auto;
+}
