--- a/app/views/home/home.html
+++ b/app/views/home/home.html
@@ -139,8 +139,8 @@
           </div>
 
           <div class="form-group"><label class="required">Test your math skill</label>
-          	<div>
-          		<simple-captcha valid="captchaValid"></simple-captcha>
+          	<div id="captcha">
+          		
           	</div>
           </div>
           
