--- a/app/views/footer/footer.html
+++ b/app/views/footer/footer.html
@@ -1,79 +1,67 @@
-<!-- <!doctype html>
-<html>
-  <head>
-    <meta charset="utf-8">
-    <title></title>
-    <meta name="description" content="">
-    <meta name="viewport" content="width=device-width">
-	<link rel="stylesheet" href="../../bower_components/bootstrap/dist/css/bootstrap.css" />
-	<link rel="stylesheet" href="../styles/style.css">
-	</head>
-	<body> -->
+
 <footer class="col-xs-12" id ="footer">
-<div class="col-xs-12 col-sm-6 col-md-5 col-md-offset-1">
-<a href='/'>
-<span class="logo"><img class="img img-rounded" src="../images/logo.jpeg"/></span>
-</a>
-<div class="h3">Welcome to Le Partycious</div>
-<p class="info">We provide event and hospitality services with a single motto of bringing smiles on the faces of people.We provide event and hospitality services with a single motto of bringing smiles on the faces of people.We provide event and hospitality services with a single motto of bringing smiles on the faces of people.We provide event and hospitality services with a single motto of bringing smiles on the faces of people.</p>
-<p class="connect">Connect With Us</p>
-<ul class="social">
-<li>
-<a target="_blank" href="https://www.facebook.com/LePartycious">
-<span><img class="img img-rounded" src="../images/facebook.png"/></span>
-</a>
-</li>
-<li>
-<a target="_blank" href="https://twitter.com/lepartycious">
-<span><img class="img img-rounded" src="../images/twitter.jpeg"/></span>
-</a>
-</li>
-<li>
-<a target="_blank" href="https://www.youtube.com/channel/UC-VL9PRSgYJF9L_XDUrYpzA">
-<span><img class="img img-rounded" src="../images/youtube.png"/></span>
-</a>
-</li>
-<li>
-<a target="_blank" href="https://instagram.com/lepartycious">
-<span><img class="img img-rounded" src="../images/instagram.jpeg"/></span>
-</a>
-</li>
-</ul>
-</div>
-<div class="col-xs-12 col-sm-6 col-md-3 col-md-offset-1">
-<div class="h4"> COMPANY</div>
-<div class="row">
-<div class="col-xs-6 col-sm-5 col-md-4">
-<ul>
-<a href="#">
-<li>About Us</li>
-</a>
-<a href="#">
-<li>Contact Us</li>
-</a>
-<a href="#">
-<li>FAQs</li>
-</a>
-<a href="#">
-<li>T & C</li>
-</a>
-</ul>
-</div>
-</div>
-</div>
-<div class="col-xs-12 col-sm-6 col-md-2">
-<div class="h4">NEED HELP?</div>
-<ul>
-<li>Call us on</li>
-<li itemprop="telephone">
-<strong>+917222034001</strong></li>
-<li>or</li>
-<li>Write to us</li>
-<li itemprop="email">lepartycious@gmail.com</li>
-</ul>
-</div>
+   <div class="col-xs-12 col-sm-6 col-md-5 col-md-offset-1">
+      <a href='/'>
+      <span class="logo"><img class="img img-rounded" src="../images/logo.jpeg"/></span>
+      </a>
+      <div class="h3">Welcome to Le Partycious</div>
+      <p class="info">We provide event and hospitality services with a single motto of bringing smiles on the faces of people.We provide event and hospitality services with a single motto of bringing smiles on the faces of people.We provide event and hospitality services with a single motto of bringing smiles on the faces of people.We provide event and hospitality services with a single motto of bringing smiles on the faces of people.</p>
+      <p class="connect">Connect With Us</p>
+      <ul class="social">
+         <li>
+            <a target="_blank" href="https://www.facebook.com/LePartycious">
+            <span><img class="img img-rounded" src="../images/facebook.png"/></span>
+            </a>
+         </li>
+         <li>
+            <a target="_blank" href="https://twitter.com/lepartycious">
+            <span><img class="img img-rounded" src="../images/twitter.jpeg"/></span>
+            </a>
+         </li>
+         <li>
+            <a target="_blank" href="https://www.youtube.com/channel/UC-VL9PRSgYJF9L_XDUrYpzA">
+            <span><img class="img img-rounded" src="../images/youtube.png"/></span>
+            </a>
+         </li>
+         <li>
+            <a target="_blank" href="https://instagram.com/lepartycious">
+            <span><img class="img img-rounded" src="../images/instagram.jpeg"/></span>
+            </a>
+         </li>
+      </ul>
+   </div>
+   <div class="col-xs-12 col-sm-6 col-md-3 col-md-offset-1">
+      <div class="h4"> COMPANY</div>
+      <div class="row">
+         <div class="col-xs-6 col-sm-5 col-md-4">
+            <ul>
+               <a href="#">
+                  <li>About Us</li>
+               </a>
+               <a href="#" ng-click="vm.openContactForm();">
+                  <li>Contact Us</li>
+               </a>
+               <a href="#">
+                  <li>FAQs</li>
+               </a>
+               <a href="#">
+                  <li>T & C</li>
+               </a>
+            </ul>
+         </div>
+      </div>
+   </div>
+   <div class="col-xs-12 col-sm-6 col-md-2">
+      <div class="h4">NEED HELP?</div>
+      <ul>
+         <li>Call us on</li>
+         <li itemprop="telephone">
+            <strong>+917222034001</strong>
+         </li>
+         <li>or</li>
+         <li>Write to us</li>
+         <li itemprop="email">lepartycious@gmail.com</li>
+      </ul>
+   </div>
 </footer>
-<!-- <script src="../../bower_components/jquery/dist/jquery.js"></script>
-<script src="../../bower_components/bootstrap/dist/js/bootstrap.js"></script>
-</body>
-</html> -->
+<div data-ng-include="'views/home/contactus.html'"></div>
