--- a/app/views/data/data.html
+++ b/app/views/data/data.html
@@ -4,7 +4,7 @@
 		<div class='col-xs-12'>
 			<h4 class='theme-color'>FILTERS</h4>
 			<div class="filters">
-
+				<div data-ng-include="'views/data/filters.html'"></div>
 			</div>
 		</div>
 	</div>
@@ -41,8 +41,13 @@
 
 
 		</div>
+
+		<div ng-if="vm.resultList.length == 0">No records found!</div>
 		
 	</div>
 </div>
 
 <dir-pagination-controls boundry-links="true" on-page-change="pageChangeHandler(newPageNumber)" pagination-id="dataPagination"></dir-pagination-controls>
+
+
+
